@@ -3,6 +3,7 @@ package com.uber.nullaway.jspecify;
 import com.google.errorprone.CompilationTestHelper;
 import com.uber.nullaway.NullAwayTestsBase;
 import java.util.Arrays;
+import java.util.List;
 import org.junit.Ignore;
 import org.junit.Test;
 
@@ -1304,6 +1305,24 @@ public class GenericsTests extends NullAwayTestsBase {
   }
 
   @Test
+  public void nullableVoidGenericsLambda() {
+    makeHelper()
+        .addSourceLines(
+            "Test.java",
+            "package com.uber;",
+            "import org.jspecify.annotations.Nullable;",
+            "class Test {",
+            "  interface TestInterface<T extends @Nullable Object> {",
+            "    T test();",
+            "  }",
+            "  public TestInterface<@Nullable Void> getTest() {",
+            "    return () -> { return null; };",
+            "  }",
+            "}")
+        .doTest();
+  }
+
+  @Test
   public void explicitlyTypedAnonymousClassAsReceiver() {
     makeHelper()
         .addSourceLines(
@@ -1738,6 +1757,36 @@ public class GenericsTests extends NullAwayTestsBase {
   }
 
   @Test
+  public void pseudoAssignmentWithRawDeclaredTypes() {
+    makeHelper()
+        .addSourceLines(
+            "Test.java",
+            "package com.uber;",
+            "import org.jspecify.annotations.Nullable;",
+            "class Test {",
+            "  static class A<T> {",
+            "    void foo(T n) {}",
+            "  }",
+            "  static class B {",
+            "    static void bar(A a) {}",
+            "    static void m1(A<?> a) {",
+            "      bar(a);",
+            "    }",
+            "    static A m2(A<?> a) {",
+            "      return a;",
+            "    }",
+            "    @Nullable A<?> field;",
+            "    void m3(A<?> a) {",
+            "      field = a;",
+            "      A local = a;",
+            "      local = a;",
+            "    }",
+            "  }",
+            "}")
+        .doTest();
+  }
+
+  @Test
   public void testUseOfUnannotatedCode() {
     makeHelper()
         .addSourceLines(
@@ -1765,6 +1814,7 @@ public class GenericsTests extends NullAwayTestsBase {
         .doTest();
   }
 
+  @Test
   public void boxInteger() {
     makeHelper()
         .addSourceLines(
@@ -1789,6 +1839,147 @@ public class GenericsTests extends NullAwayTestsBase {
         .doTest();
   }
 
+  @Test
+  public void issue1008() {
+    // testing for no crash
+    makeHelper()
+        .addSourceLines(
+            "EnumCombinations.java",
+            "package com.uber;",
+            "public class EnumCombinations {",
+            "    public static void combinations(Class<? extends Enum<?>> first, Class<? extends Enum<?>>... others) {",
+            "    }",
+            "    public static void args(Class<? extends Enum<?>> first, Class<? extends Enum<?>>... others) {",
+            "        combinations(first, others);",
+            "    }",
+            "}")
+        .doTest();
+  }
+
+  @Test
+  public void intersectionTypeFromConditionalExprInStringConcat() {
+    makeHelper()
+        .addSourceLines(
+            "ServiceExtraInfo.java",
+            "package com.uber;",
+            "import org.jspecify.annotations.Nullable;",
+            "public class ServiceExtraInfo {",
+            "    private java.util.@Nullable List<Object> relativeServices;",
+            "    private String getStr() {",
+            "        return (relativeServices == null ? \"relativeServices == null\" : relativeServices.size()) + \"\";",
+            "    }",
+            "    private String getStr2(boolean b, java.util.List<Object> l) {",
+            "        return (b ? (b ? l.size() : \"hello\") : 3) + \"\";",
+            "    }",
+            "}")
+        .doTest();
+  }
+
+  @Test
+  public void intersectionTypeInvalidAssign() {
+    String[] source;
+    // javac behavior differs between versions before and after 23, so we have two versions of the
+    // test source code
+    if (Runtime.version().feature() >= 23) {
+      source =
+          new String[] {
+            "package com.uber;",
+            "import org.jspecify.annotations.Nullable;",
+            "import java.io.Serializable;",
+            "public class Test {",
+            "  interface A<T extends @Nullable Object> {}",
+            "  static class B implements A<@Nullable String>, Serializable {}",
+            "  static class C implements A<String>, Serializable {}",
+            "  static void test1(Object o) {",
+            "    var x = (A<String> & Serializable) o;",
+            "    // BUG: Diagnostic contains: Cannot assign from type B to type A<String> & Serializable",
+            "    x = new B();",
+            "    // ok",
+            "    x = new C();",
+            "  }",
+            "  static void test2(Object o) {",
+            "    var x = (A<@Nullable String> & Serializable) o;",
+            "    x = new B();",
+            "    // BUG: Diagnostic contains: Cannot assign from type C to type A<@Nullable String> & Serializable",
+            "    x = new C();",
+            "  }",
+            "}"
+          };
+    } else {
+      // Before JDK 23, javac does not compute types with annotations for cast expressions, so the
+      // test assertions do not work as expected.
+      source =
+          new String[] {
+            "package com.uber;",
+            "import org.jspecify.annotations.Nullable;",
+            "import java.io.Serializable;",
+            "public class Test {",
+            "  interface A<T extends @Nullable Object> {}",
+            "  static class B implements A<@Nullable String>, Serializable {}",
+            "  static class C implements A<String>, Serializable {}",
+            "  static void test1(Object o) {",
+            "    var x = (A<String> & Serializable) o;",
+            "    // BUG: Diagnostic contains: Cannot assign from type B to type A<String> & Serializable",
+            "    x = new B();",
+            "    // ok",
+            "    x = new C();",
+            "  }",
+            "  static void test2(Object o) {",
+            "    var x = (A<@Nullable String> & Serializable) o;",
+            // TODO: should _not_ be an error, see https://github.com/uber/NullAway/issues/1022
+            "    // BUG: Diagnostic contains: Cannot assign from type B to type A<String> & Serializable",
+            "    x = new B();",
+            // TODO: _should_ be an error, see https://github.com/uber/NullAway/issues/1022
+            "    x = new C();",
+            "  }",
+            "}"
+          };
+    }
+    makeHelper().addSourceLines("Test.java", source).doTest();
+  }
+
+  @Test
+  public void issue1014() {
+    makeHelper()
+        .addSourceLines(
+            "Test.java",
+            "package com.uber;",
+            "import org.jspecify.annotations.Nullable;",
+            "import java.util.function.Function;",
+            "class Test<R> {",
+            "    public interface PropertyFunction<",
+            "            T extends @Nullable Object, R extends @Nullable Object, E extends Exception>",
+            "            extends Function<T, R> {",
+            "        R _apply(T t) throws E;",
+            "    }",
+            "    @Nullable PropertyFunction<? super R, ? extends String, ? super Exception> stringFunc;",
+            "    public void propertyString() {",
+            "        var f = stringFunc;",
+            "    }",
+            "}")
+        .doTest();
+  }
+
+  @Test
+  public void issue1019() {
+    makeHelper()
+        .addSourceLines(
+            "Test.java",
+            "package com.uber;",
+            "import java.util.ArrayList;",
+            "import java.util.List;",
+            "",
+            "public class Test {",
+            "    public static class StringList extends ArrayList {",
+            "    }",
+            "    @SuppressWarnings(\"unchecked\")",
+            "    public static List<String> convert(final StringList stringList) {",
+            "        return stringList;",
+            "    }",
+            "}")
+        .doTest();
+  }
+
   private CompilationTestHelper makeHelper() {
     return makeTestHelperWithArgs(
         Arrays.asList(
@@ -1796,6 +1987,6 @@ public class GenericsTests extends NullAwayTestsBase {
   }
 
   private CompilationTestHelper makeHelperWithoutJSpecifyMode() {
-    return makeTestHelperWithArgs(Arrays.asList("-XepOpt:NullAway:AnnotatedPackages=com.uber"));
+    return makeTestHelperWithArgs(List.of("-XepOpt:NullAway:AnnotatedPackages=com.uber"));
   }
 }
